SubVersion: $Id$

- 11/12/2006, version 2.81d
	- [roms]  $2321: store *.sav files in the images folder rather than polluting the application top folder
	- [roms]  $2322: updated to use API changes of tifiles2 v1.0.3 
	- [kevin] $2335: fixed the Tcl/Tk code in Insight so it can be debugged with the TclPro debugger


- 07/08/2006, version 2.81c
	- [kevin] $2202: fixed g_free of invalid pointers in state.c (#1471709)
	- [kevin] $2203: fixed ticalcs_cable_detach of NULL calc_handle when exiting TiEmu early (reported by hypersonic)
	- [kevin] $2211: imported Insight 6.5 and intl directory from Binutils 2.17 and merged TiEmu changes
	                 quote file name for add_symbol_file properly for the new add_symbol_file command parser in GDB 6.5
	- [roms]  $2216: replaced some hand-made GTK+ user boxes by standard GTK+ ones (look better)
	- [kevin] $2219: regenerated oleaut_i.c with WIDL now that this is supported
	- [kevin] $2223: force serial make in src/Makefile.in because the weirdness of the gdb subdir make breaks parallel make
	- [roms]  $2224: reverted back OLE changes in oleaut_i.c: break MSVC compilation
	- [roms]  $2225: fixed signed/unsigned warnings with MSVC
	- [kevin] $2231: fixed get_folder_list_handle failing
	- [kevin] $2232: fixed canceling KDE file dialog causing an "invalid file" error
	- [roms]  $2233: new feature: 'Link Log' dialog box (part 1/3)
	- [roms]  $2234: factorized code: PC logging has been moved from Ti68kBreakpoints structure 
		to Ti68kLogging one. Please note this doesn't affect the SAV_REVISION flag (part 2/3).
	- [roms]  $2235: fill dialog box with log and save to file(part 3/3)
	- [roms]  $2236: improved link logger (print data blocks rather than single bytes)
	- [kevin] $2243: created a D-Bus interface
	- [kevin] $2245: register a service name for the D-Bus interface
	- [kevin] $2246: don't check for unneeded aRts and KDE documentation generation executables (request from Gentoo #112985)